<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_background"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/content_camera"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:context="ke.co.zeno.bukuapp.ui.main.CameraActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <RelativeLayout

                android:layout_marginTop="56dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/image_border"
                android:clickable="true"
                android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/camera_preview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/usedBookImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

                <com.joanzapata.iconify.widget.IconButton
                    android:id="@+id/bookImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:layout_marginTop="56dp"
                    android:text="{fa-camera}"
                    android:shadowColor="@color/text_shadow_color"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1"
                    android:textSize="40sp"
                    android:textColor="@color/camera_icon"
                    android:onClick="onClick"
                    />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_book_title"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:maxLines="1"
                          android:hint="@string/book_title" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_book_price"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:maxLines="1"
                          android:hint="@string/book_price" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <!--drop down list to be include with Good Poor fair -->
                <EditText android:id="@+id/input_book_condition"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:maxLines="1"
                          android:hint="@string/book_condition" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_owner_comment"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:maxLines="10"
                          android:hint="@string/owner_comment" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>


    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
